<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSpeakerProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarSpeakerProfile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collToolLayProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Speaker Name"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/ivDetailSpeakerPhoto"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_foreground"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close"
                android:layout_margin="@dimen/padding_text"
                android:scaleX="1.5"
                android:scaleY="1.5">
            </ImageView>

            <TextView
                android:id="@+id/tvDetailSpeakerName"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:lines="1"
                android:text="@string/speaker_name"
                android:textSize="@dimen/detailsTitleText"
                android:ellipsize="end"
                android:textStyle="bold"
                android:gravity="bottom"
                android:padding="@dimen/padding_text">
            </TextView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSpeakerTwitter"
        android:contentDescription="@string/speaker_Twitter_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_icons_twitter"
        app:fabSize="normal"
        app:layout_anchor="@id/appbarSpeakerProfile"
        app:layout_anchorGravity="end|bottom"
        android:layout_margin="30dp"
        android:backgroundTint="@color/twitter"
        app:elevation="@dimen/cardElevation"
        app:pressedTranslationZ="12dp"
        app:tint="@color/design_default_color_surface"
        app:backgroundTint="@color/twitter"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_text">

            <TextView
                android:id="@+id/tvDetailSpeakerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginHomeSubtitle"
                android:gravity="start"
                android:text="@string/speaker_title"
                android:textColor="@color/black"
                android:textSize="@dimen/sizeTitle"
                android:textStyle="normal">
            </TextView>

            <TextView
                android:id="@+id/tvDetailSpeakerJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginHomeSubtitle"
                android:gravity="start"
                android:text="@string/speaker_workplace"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="normal">
            </TextView>

            <TextView
                android:id="@+id/tvDetailSpeakerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginHomeSubtitle"
                android:gravity="start"
                android:text="@string/speaker_biography"
                android:textColor="@color/black60"
                android:textSize="@dimen/sizeTitle"
                android:textStyle="normal"
                >
            </TextView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>



