<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_Location"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collToolBarLayLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Speaker Name"
            app:titleEnabled="false">
            <ImageView
                android:id="@+id/ivLocationPhoto"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/location_image"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.3"/>

            <TextView
                android:id="@+id/tvDetailLocationName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/marginHomeSubtitle"
                android:gravity="bottom"
                android:text="Platzi Conf"
                android:textColor="@color/white"
                android:textSize="@dimen/detailsTitleText"
                android:textStyle="bold"
                android:padding="@dimen/padding_text"
                android:lines="4"
                android:ellipsize="end">
            </TextView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbLocationDetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_text">

                <TextView
                    android:id="@+id/tvDetailLocationAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginHomeSubtitle"
                    android:gravity="start"
                    android:text="@string/location_Address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                    android:drawableTint="@color/red"
                    android:drawablePadding="10dp"
                    android:ellipsize="end">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.5">
                </View>

                <TextView
                    android:id="@+id/tvDetailLocationPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginHomeSubtitle"
                    android:gravity="start"
                    android:text="@string/location_Phone"
                    android:textColor="@color/black60"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_baseline_smartphone_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/twitter">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.5">
                </View>
                <TextView
                    android:id="@+id/tvDetailLocationLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginHomeSubtitle"
                    android:gravity="start"
                    android:text="@string/location_Link"
                    android:textColor="@color/black60"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_baseline_insert_link_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginBottom="10dp"
                    android:alpha="0.5">
                </View>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
